feat: Add subtitle to DriveSelectionPage and localize finish page
Updated DriveSelectionPage.xaml to include a new subtitle TextBlock and adjusted CheckBox properties.
Modified DriveSelectionPage.xaml.cs to collapse the subtitle on button click.
Added localized strings for the finish page in Resources.resw.

--- a/src/gui4/windows/kDrive client/kDrive client/Strings/de-DE/Resources.resw
+++ b/src/gui4/windows/kDrive client/kDrive client/Strings/de-DE/Resources.resw
@@ -321,4 +321,13 @@
   <data name="Page_Onboarding_DriveSelectionPage_AdvancedDialog_TeachingTip.Subtitle" xml:space="preserve">
     <value />
   </data>
+  <data name="Page_Onboarding_FinishPage_Title.Text" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Page_Onboarding_FinishPage_Subtitle.Text" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Page_Onboarding_FinishPage_OpenButton.Content" xml:space="preserve">
+    <value />
+  </data>
 </root>
