--- a/src/gui4/windows/kDrive client/kDrive client/Strings/en-US/Resources.resw
+++ b/src/gui4/windows/kDrive client/kDrive client/Strings/en-US/Resources.resw
@@ -153,7 +153,7 @@
   <data name="CC_SyncStatusBar_SyncedStatus.Text" xml:space="preserve">
     <value />
   </data>
-  <data name="CC_SyncErrorBar_message.Text" xml:space="preserve">
+  <data name="CC_SyncErrorBar_message.Message" xml:space="preserve">
     <value />
   </data>
   <data name="CC_SyncErrorBar_button.Content" xml:space="preserve">
