--- a/src/gui4/windows/kDrive client/kDrive client/Strings/fr-FR/Resources.resw
+++ b/src/gui4/windows/kDrive client/kDrive client/Strings/fr-FR/Resources.resw
@@ -155,7 +155,7 @@
   <data name="CC_SyncStatusBar_SyncedStatus.Text" xml:space="preserve">
     <value>Tous les fichiers sont synchronisés</value>
   </data>
-  <data name="CC_SyncErrorBar_message.Text" xml:space="preserve">
+  <data name="CC_SyncErrorBar_message.Message" xml:space="preserve">
     <value>Impossible de synchroniser certains fichiers</value>
   </data>
   <data name="CC_SyncErrorBar_button.Content" xml:space="preserve">
