feat(ui): add DoubleComboBox for drive and sync selection
- Introduced a new `DoubleComboBox` control in `MainWindow.xaml` to enhance UI for selecting drives and syncs.
- Updated exception handling in `StoragePage.xaml.cs` and `CommClient.cs` for broader error coverage.
- Modified `InitializeMockData` in `CommRequests.cs` to restructure mock data for users and drives.
- Changed resource key from `Page_StoragePage_DiskUnavailable.Text` to `Page_StoragePage_DiskUnavailable.Message`.
- Added `AllDrives` property in `App.cs` for improved data binding capabilities.

--- a/src/gui4/windows/kDrive client/kDrive client/Strings/de-DE/Resources.resw
+++ b/src/gui4/windows/kDrive client/kDrive client/Strings/de-DE/Resources.resw
@@ -390,7 +390,7 @@
   <data name="Global_KiloBytes" xml:space="preserve">
     <value />
   </data>
-  <data name="Page_StoragePage_DiskUnavailable.Text" xml:space="preserve">
+  <data name="Page_StoragePage_DiskUnavailable.Message" xml:space="preserve">
     <value />
   </data>
 </root>
