--- a/src/gui4/windows/kDrive client/kDrive client/Strings/fr-FR/Resources.resw
+++ b/src/gui4/windows/kDrive client/kDrive client/Strings/fr-FR/Resources.resw
@@ -161,17 +161,38 @@
   <data name="CC_SyncErrorBar_button.Content" xml:space="preserve">
     <value>Vérifier les fichiers</value>
   </data>
-  <data name="CC_ActivityList_Header_Name.Text" xml:space="preserve">
+  <data name="CC_SyncActivityTable_Header_Name.Text" xml:space="preserve">
     <value>Nom</value>
   </data>
-  <data name="CC_ActivityList_Header_State.Text" xml:space="preserve">
-    <value>État</value>
+  <data name="CC_SyncActivityTable_Header_State.Text" xml:space="preserve">
+    <value>Statut</value>
   </data>
-  <data name="CC_ActivityList_Header_Size.Text" xml:space="preserve">
+  <data name="Converter_SyncDirectionToToolTipConverter_Outgoing" xml:space="preserve">
+    <value>Synchronisé depuis votre ordinateur</value>
+  </data>
+  <data name="Converter_DateTimeToTimeAgoConverter_Since" xml:space="preserve">
+    <value>Depuis {0}</value>
+  </data>
+  <data name="Converter_DateTimeToTimeAgoConverter_Ago" xml:space="preserve">
+    <value>Il y à {0}</value>
+  </data>
+  <data name="CC_SyncActivityTable_Header_Size.Text" xml:space="preserve">
     <value>Taille</value>
   </data>
-  <data name="CC_ActivityList_Header_LastLocation.Text" xml:space="preserve">
+  <data name="CC_SyncActivityTable_Header_LastLocation.Text" xml:space="preserve">
     <value>Dernier emplacement</value>
+    <comment>The parent folder of the synchronized item</comment>
+  </data>
+  <data name="CC_SyncActivityTable_Empty_Title.Text" xml:space="preserve">
+    <value>Aucun changement récent</value>
+    <comment>The parent folder of the synchronized item</comment>
+  </data>
+  <data name="CC_SyncActivityTable_Empty_Link.Content" xml:space="preserve">
+    <value>Fermer kDrive</value>
+    <comment>The parent folder of the synchronized item</comment>
+  </data>
+  <data name="CC_SyncActivityTable_Empty_Description.Text" xml:space="preserve">
+    <value>Revenez ici pour suivre vos prochaines synchronisations</value>
     <comment>The parent folder of the synchronized item</comment>
   </data>
   <data name="Global_Second" xml:space="preserve">
@@ -403,8 +424,8 @@ For translations not tied to a UI element, use: Global_{Unique human readable id
   <data name="Page_StoragePage_FreeSpace.Text" xml:space="preserve">
     <value>Espace libre</value>
   </data>
-  <data name="Global_Bytes" xml:space="preserve">
-    <value>octets</value>
+  <data name="Converter_SyncDirectionToToolTipConverter_Incoming" xml:space="preserve">
+    <value>Synchronisé depuis kDrive web</value>
   </data>
   <data name="Page_HomePage_Hello.Text" xml:space="preserve">
     <value>Bonjour</value>
