--- a/src/front/macOS/kDriveResources/Localizable/de.lproj/Localizable.strings
+++ b/src/front/macOS/kDriveResources/Localizable/de.lproj/Localizable.strings
@@ -2,15 +2,28 @@
  * Loco ios export: Xcode Strings (legacy)
  * Project: kDrive Desktop
  * Locale: de, German
+ * Tagged: macOS
  * Exported by: Valentin Perignon
- * Exported at: Fri, 19 Sep 2025 13:17:41 +0200
+ * Exported at: Wed, 08 Oct 2025 16:23:50 +0200
  */
+
+/* loco:68e673c48af12c42e80027c8 */
+"buttonCreateAccount" = "Ein Konto erstellen";
+
+/* loco:68e673b2042a15d8470f9452 */
+"buttonLogin" = "Sich anmelden";
 
 /* loco:68b04d823f2b735c170caea2 */
 "buttonOpenInBrowser" = "Im Browser öffnen";
 
 /* loco:68b04d5a63085b7ab90cea63 */
 "buttonOpenInFinder" = "In Finder öffnen";
+
+/* loco:68e6739c8af12c42e80027c5 */
+"onboardingLoginDescription" = "Die schnelle und sichere private Cloud, die in der Schweiz gehostet wird.\n\nMelden Sie sich an und halten Sie Ihre Dokumente auf all Ihren Geräten synchronisiert.";
+
+/* loco:68e673754d80559c460bdf02 */
+"onboardingLoginTitle" = "Willkommen bei kDrive!";
 
 /* loco:68cd386502633dee14000352 */
 "sidebarItemAccounts" = "Konten";
