--- a/src/front/macOS/kDriveResources/Localizable/fr.lproj/Localizable.strings
+++ b/src/front/macOS/kDriveResources/Localizable/fr.lproj/Localizable.strings
@@ -2,15 +2,28 @@
  * Loco ios export: Xcode Strings (legacy)
  * Project: kDrive Desktop
  * Locale: fr, French
+ * Tagged: macOS
  * Exported by: Valentin Perignon
- * Exported at: Fri, 19 Sep 2025 13:17:41 +0200
+ * Exported at: Wed, 08 Oct 2025 16:23:50 +0200
  */
+
+/* loco:68e673c48af12c42e80027c8 */
+"buttonCreateAccount" = "Créer un compte";
+
+/* loco:68e673b2042a15d8470f9452 */
+"buttonLogin" = "Se connecter";
 
 /* loco:68b04d823f2b735c170caea2 */
 "buttonOpenInBrowser" = "Ouvrir dans le navigateur";
 
 /* loco:68b04d5a63085b7ab90cea63 */
 "buttonOpenInFinder" = "Ouvrir dans Finder";
+
+/* loco:68e6739c8af12c42e80027c5 */
+"onboardingLoginDescription" = "Le cloud privé, rapide et sécurisé, hébergé en Suisse.\n\nConnectez-vous et gardez vos documents synchronisés sur tous vos appareils.";
+
+/* loco:68e673754d80559c460bdf02 */
+"onboardingLoginTitle" = "Bienvenue dans kDrive !";
 
 /* loco:68cd386502633dee14000352 */
 "sidebarItemAccounts" = "Comptes";
